[package]
name = "yew_hex02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.11.0"
js-sys = "0.3.69"
rand = "0.8.5"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["FileReader", "DragEvent", "DataTransfer"] }
yew = { version = "0.21.0", features = ["csr"] }
